text-align-fix

--- a/src/components/FinalStage.css
+++ b/src/components/FinalStage.css
@@ -159,7 +159,6 @@
   width: 100%;
   max-width: 85.4rem;
   display: flex;
-  /* align-items: center; */
   flex-direction: column;
   margin: 0 auto;
   border: 4px solid #2c3234;
@@ -207,8 +206,7 @@
   width: 100%;
   max-width: 39.5rem;
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
+
   flex-direction: column;
 }
 
@@ -238,7 +236,7 @@
   right: 5%;
   top: 0;
 }
-.finalstage-travel-cards p {
+.finalstage-travel-bottom-text {
   color: #fff;
   font-size: 1.4rem;
   margin-bottom: 1.2rem;
